<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".parkir.inputdataparkir"
    tools:showIn="@layout/parkirinputdata_activity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">


    <TextView
        android:text="@string/inputdataparkir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/nomor_polisi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nomorpolisi"
                android:inputType="text"
                android:layout_margin="10dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input"
            android:textColor="@color/colorPrimary"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

    </LinearLayout>




</LinearLayout>